chore: convert indentation from 4 spaces to tabs, add .editorconfig
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>